# zkswavm

./: .gitignore  Cargo.toml  README.md
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
specs/: Cargo.toml
specs/src/: etable.rs  event.rs  init_memory.rs  instruction.rs  itable.rs  jtable.rs  jump.rs  lib.rs  memory.rs  mod.rs  mtable.rs  step.rs  types.rs
src/: builder.rs  event.rs  instruction.rs  jump.rs  main.rs  memory.rs  memory_address.rs  memory_init.rs  range.rs  row_diff.rs  test.rs  utils.rs
src/circuits/: event.rs  instruction.rs  jump.rs  memory.rs  memory_init.rs  mod.rs  range.rs
src/circuits/config_builder/: op_const.rs  op_drop.rs  op_local_get.rs  op_return.rs
src/circuits/utils/: mod.rs  row_diff.rs  tvalue.rs  value_64.rs
src/config_builder/: op_const.rs  op_drop.rs  op_local_get.rs
src/opcode/: mod.rs  stack_only.rs
src/runtime/: mod.rs  types.rs  wasmi_interpreter.rs
src/spec/: evnet.rs  init_memory.rs  instruction.rs  jump.rs  memory.rs  mod.rs
src/test/: test_circuit.rs  test_circuit_builder.rs
