[package]
name = "zkswavm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = { version = "0.3", optional = true }
rayon = "1.5.1"
ff = "0.12"
group = "0.12"
pasta_curves = "0.4"
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
halo2_proofs = { version = "0.2.0", features = ["dev-graph"]}

# Developer tooling dependencies
plotters = "0.3.0"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }