[package]
name = "zkswavm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = "0.2.0"
num-integer = "0.1.45"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
